--- a/Zadanie 25 strona o tematyce świątecznej/style.css
+++ b/Zadanie 25 strona o tematyce świątecznej/style.css
@@ -1,8 +1,19 @@
-body
-{
-	background-color: #404040;
-	font-family: 'Lato', sans-serif;
+a {
+	text-decoration: none;
+color: darkviolet;
 }
+
+body, html {
+	height: 100%;
+	background-image: url("1694218.jpg");
+	background-position: center;
+	background-repeat: repeat;
+	background-size: cover;
+	width: 100%;
+}
+
+
+
 
 #container
 {
@@ -18,25 +29,31 @@ body
 	font-size: 44px;
 	letter-spacing: 3px;
 	font-weight: 900;
+	text-align: center;
+
 }
 
 #menu
 {
-	background-color: #303030;
+	background: linear-gradient(to bottom, #ffff99 0%, #ff3300 100%);
 	margin-top: 20px;
-	color: #ffffff;
 	padding: 10px;
+	opacity: 0.9;
+	box-shadow: aqua 1px 1px 20px 2px;
+	color: aqua;
 	
 }
 
 #topbar
 {
-	background-color: #128870;
+	background: linear-gradient(to bottom, #ff3300 0%, #ff99cc 100%);
 	color: white;
 	padding: 10px;
 	margin-top: 20px;
 	margin-bottom: 25px;
 	height: 170px;
+	opacity: 0.9;
+	box-shadow: aqua 1px 1px 20px 2px;
 }
 
 #topbarL
@@ -63,30 +80,21 @@ body
 	padding: 20px;
 	width: 520px;
 	font-size: 16px;
-	text-align: justify;
-
-}
-
-#sidebar
-{
-	float: left;
-	width: 148px;
-	min-height: 620px;
-	padding:20px;
-	background-color: lightgray;
 	text-align: center;
-	font-size: 18px;
-	border-right: 2px dotted #666666;
+
 }
+
 
 #content
 {
 	float: left;
 	padding: 40px;
-	width: 730px;
+	width: 920px;
 	background-color: #dedede;
-	min-height: 580px;
+	min-height: 400px;
 	text-align: justify;
+	opacity: 0.7;
+
 }
 
 #footer
