--- a/Zadanie 25 strona o tematyce świątecznej/style.css
+++ b/Zadanie 25 strona o tematyce świątecznej/style.css
@@ -64,7 +64,15 @@ body, html {
 	text-align: center;
 	border-right: 2px dotted #cccccc;
 }
-
+#obrazek2 {
+	width: 130px;
+	height: 130px;
+}
+#obrazek3 {
+	width: 130px;
+	height: 130px;
+	transform: scaleX(-1);
+}
 #obrazek
 {
 	float:right;
@@ -73,6 +81,8 @@ body, html {
 	text-align: center;
 	border-left: 2px dotted #cccccc;
 	display: flex;
+	height: 130px;
+
 }
 #topbarR
 {
@@ -100,7 +110,7 @@ body, html {
 #footer
 {
 	clear: both;
-	color: white;
+	color: black;
 	text-align: center;
 	padding: 20px;
 	font-size: 18px;
