--- a/Klasa 2/JavaScript/T 00 Zadania/Zadanie 24 - Funkcje wbudowane/Zadanie T24 - formatowanie daty/style.css
+++ b/Klasa 2/JavaScript/T 00 Zadania/Zadanie 24 - Funkcje wbudowane/Zadanie T24 - formatowanie daty/style.css
@@ -9,5 +9,8 @@ body {
     padding-top: 40px;
     color: red;
     font-size: large;
-
+    text-align: center;
+}
+.bomba  {
+    margin-left:690px;
 }
